--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 									<span class="date">April 04, 2024</span>
 									<h2><a href="#">Data Cleaning, <br />
 									Manipulation , and Exploratory Analysis</a></h2>
+									<p>This is Mohammad yaghmouri , a passionate data analyst who delves deep into <br />
+									<p>big data in the field of biology and business to make data-driven decisions and strategies<br />
 									<p>Here you can see my coding samples in SQL , R , and Python<br />
-									
 								</header>
 								<a href="#" class="image main"><img src="images/ssss.png" alt="" /></a>
 								<ul class="actions special">
